{{$NEXT}}

0.93  2011-06-06
    fixed logout set Location header (broken in 0.92)
    added ticket object to _ticket_idle_timeout() args

0.92  2011-06-03
*** Ticket Format Has Changed ***
    Tickets are now opaque, and are strings that include the signature hash,
        and the ticket data in MIME::Base64 encoding. This ensures that fields
        that may have been added to the ticket by a subclass are included in
        the signature.

0.91  2011-05-13
    added SIGNATURE support to make dist
    added signature test
    added META_MERGE bugtracker, repository to Makefile.PL
    cleanup Makefile.PL a bit
    fixed uninitialized warning in _unpack_ticket() [51138]
    fixed Odd number of elements warning in _unpack_ticket() [51136]
    POD: explain difference between "TicketExpires" and inherited AuthCookie
        "Expire" directive.
    MP1: synchronize with MP2 version.
    abstract common MP1/MP2 code into ::Base package.
    Move ::Util code into ::Base
    use Class::Accessor::Fast to generate accessors
    combine user/pass lookup into single SQL query (one less query per request)
    added get_config() for fetching config values
    added user_table(), ticket_table(), secret_table() methods to simplify
        table lookups
    eliminate need for _get_max_secret_version() - consolidated into
        fetch_secret()
    changed make_ticket() no longer takes $r parameter - use object attr
        instead
    added secret_version() to fetch current max secret version
    abstract new ticket fields generation into new_ticket_for()

Release 0.90
    changed LICENSE information in README removed "same terms as perl" and be
        more explicit.
    moved password check routines out into Util::compare_password()
    removed last of the hard coded SQL in Apache2::AuthTicket
    removed cruft in Apache2::AuthTicket left over from MP1 migration
    changed $this => $self
    added tests for tampered cookie, CheckIP=0, CheckBrowser=1